new link contact btn

--- a/index.html
+++ b/index.html
@@ -586,18 +586,21 @@
                 </div>
                 <h3>Contactez-moi via ces plateformes</h3>
                 <div class="contact-icons">
-                    <a href="http://malt.fr/profile/marieb" target="_blank"
+                    <a href="https://marie-bu.welovedevs.com" target="_blank"
                         class="btn-circle-contact btn-circle btn-circle-social" id="malt-btn">
-                        <img src="pictures/malt-grey.png" alt="" id="malt-grey">
-                        <img src="pictures/malt-white.png" alt="" id="malt-white">
-                        <img src="pictures/malt-lightmode.png" alt="" id="malt-lightmode">
-                        <img src="pictures/malt-darkmode.png" alt="" id="malt-darkmode"></a>
+                        <img src="pictures/w3d-grey.png" alt="" id="w3d-grey">
+                        <img src="pictures/w3d-white.png" alt="" id="w3d-white">
+                        <img src="pictures/w3d-lightmode.png" alt="" id="w3d-lightmode">
+                        <img src="pictures/w3d-darkmode.png" alt="" id="w3d-darkmode">
+                    </a>
                     <a href="https://github.com/marie-bu" target="_blank"
                         class="btn-circle-contact btn-circle btn-circle-social">
-                        <i class="fab fa-github"></i></a>
+                        <i class="fab fa-github"></i>
+                    </a>
                     <a href="http://linkedin.com/in/marie-bu" target="blank"
                         class="btn-circle-contact btn-circle btn-circle-social">
-                        <i class="fab fa-linkedin"></i></a>
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
         </section>
