--- a/index.html
+++ b/index.html
@@ -223,29 +223,33 @@
         </section>
 
         <section class="section" id="skills">
-            <h3><span class="h1">Compétences</span><br>sur le parcours diplômant d'OpenClassrooms</h3>
-            <p>
-                <span class="done h3"><i class="fas fa-star"></i>Acquises</span>
-                <span class="to-do light h3"><i class="far fa-star"></i>À étudier</span>
-                <span class="perso h3"><i class="fas fa-heart"></i>Personnelles</span>
-            </p>
-            <ul>
-                <li class="done"><i class="fas fa-star"></i>HTML5</li>
-                <li class="done"><i class="fas fa-star"></i>CSS3</li>
-                <li class="done"><i class="fas fa-star"></i>Sass</li>
-                <li class="done"><i class="fas fa-star"></i>Javascript</li>
-                <li class="done"><i class="fas fa-star"></i>React & React Router</li>
-                <li class="done"><i class="fas fa-star"></i>Accessibilité</li>
-                <li class="done"><i class="fas fa-star"></i>Git & GitHub</li>
-                <li class="to-do light"><i class="far fa-star"></i>Méthode Agile</li>
-                <li class="to-do light"><i class="far fa-star"></i>Conception d'interface</li>
-                <li class="to-do light"><i class="far fa-star"></i>API & API REST</li>
-                <li class="to-do light"><i class="far fa-star"></i>Redux</li>
-                <li class="to-do light"><i class="far fa-star"></i>BDD & TDD</li>
-                <li class="to-do light"><i class="far fa-star"></i>Chrome Debugger</li>
-                <li class="perso"><i class="fas fa-heart"></i>WordPress</li>
-                <li class="perso"><i class="fas fa-heart"></i>Sensibilité pour l'UI/UX design</li>
-                <li class="perso"><i class="fas fa-heart"></i>Sens du détail</li>
+            <div class="skills-groups">
+                <ul>
+                    <li>HTML5<span class="68"></span></li>
+                    <li>CSS3<span class="76"></span></li>
+                    <li>Accessibilité<span class="63"></span></li>
+                    <li>Sass<span class="71"></span></li>
+                </ul>
+                <ul id="groupJS">
+                    <li>Javascript<span class="67"></span></li>
+                    <li>React<span class="59"></span></li>
+                </ul>
+                <ul>
+                    <li>UI/UX design<span class="58"></span></li>
+                    <li>WordPress<span class="54"></span></li>
+                    <li>Figma, Gimp<span class="56"></span></li>
+                </ul>
+            </div>
+            <p class="skills-more h5">Coming soon</p>
+            <ul class="skills-to-come">
+                <li>Méthode Agile</li>
+                <li>Conception d'interface</li>
+                <li>Atomic Design</li>
+                <li>Sketch</li>
+                <li>API & API REST</li>
+                <li>Redux</li>
+                <li>BDD & TDD</li>
+                <li>Chrome Debugger</li>
             </ul>
         </section>
 
