animation interactive elements, loader skills %

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="profile-buttons">
                     <h3>Curriculum Vitae</h3>
                     <div>
-                        <button class="btn-circle-cv btn-circle btn-circle-xs" id="open-cv"><i class="far fa-eye"></i></button>
-                        <a href="CV_Marie_Burki.pdf" download  target="blank" class="btn-circle-cv btn-circle btn-circle-xs"><i class="fas fa-download"></i></a>
+                        <button class="btn-circle-cv btn-circle btn-circle-xs interactive" id="open-cv"><i class="far fa-eye"></i></button>
+                        <a href="CV_Marie_Burki.pdf" download  target="blank" class="btn-circle-cv btn-circle btn-circle-xs interactive"><i class="fas fa-download"></i></a>
                     </div>
                 </div>
             </div>
@@ -189,24 +189,23 @@
         </section>
 
         <section class="section" id="career">
-            <h3 class="before career-title active">Parcours antérieur</h3>
+            <h3 class="before career-title active interactive-text">Parcours antérieur</h3>
             <div class="before career-text text active">
                 <p>De formation universitaire, j'ai étudié les langues et les civilisations de l'Inde et du Tibet. Je garde un grand intérêt personnel pour ces sujets.</p>
                 <p>J'ai ensuite travaillé avec plaisir dans la restauration, pour le dynamisme et le relationnel que ça impliquait.</p>
                 <p>Mais au fil du temps, les opportunités d’être créative me manquaient de plus en plus et j’ai souhaité changer de métier. Je voulais également apprendre quelque chose de technique, un outil concret qui m’ouvrirait différentes possibilités d’évolution sur le long terme.</p>
                 <p>C'est ainsi que je me suis tournée vers le développement Front-end et j’ai tout de suite croché.</p>
             </div>
-            <h3 class="change career-title">Parcous de développeuse</h3>
+            <h3 class="change career-title interactive-text interactive-text-1">Parcours de développeuse</h3>
             <div class="change career-text text">
-                <p>Je suis une dev passionnée, dotée d’une forte affinité pour l’UI/UX design. Je code tous les jours et j’ai pu rapidement évoluer grâce à une grande motivation et le plaisir d’apprendre.</p>
-                <p>En seulement quelques mois, je suis passée d’un niveau zéro à la création de ce portfolio, tout cela sur un temps libre très limité. Quant on aime, on ne compte pas... !</p>
-                <p>Le parcours de formation que j'ai suivi et l'aide de mon mentor m'ont permis de construire une base solide et structurée. C'est cela, couplé à ma forte capacité d'apprentissage et à mon autonomie, qui me permet de continuer d'apprendre par et pour moi-même, et de coder mes propres projets.</p>
+                <p>Passionnée, je code tous les jours et en seulement quelques mois, je suis passée d’un niveau zéro à la création de plusieurs projets, dont ce portfolio.</p>
+                <p>Dotée d’une forte affinité pour l’UI/UX design, j'aime particulièrement imaginer et peaufiner mes interfaces.</p>
+                <p>Le parcours de formation que j'ai suivi et l'aide de mon mentor m'ont permis de construire une base solide et structurée. Curieuse et autonome, je continue d'apprendre constamment par moi-même et cherche toujours à m'améliorer.</p>
             </div>
-            <h3 class="after career-title">Projet professionnel</h3>
+            <h3 class="after career-title interactive-text interactive-text-2">Projet professionnel</h3>
             <div class="after career-text text">
-                <p>Aujourd’hui, je cherche à terminer mon parcours de formation en alternance, mais surtout à trouver une entreprise dans laquelle je me sente bien et avec laquelle j’ai envie de collaborer et d’évoluer sur le long terme.</p>
-                <p>En effet, j’aime que ce métier nous pousse à nous améliorer constamment, à apprendre toujours de nouvelles technos et de nouveaux langages.</p>
-                <p>Sur un plan plus personnel, je suis très sensible aux enjeux sociaux et environnementaux actuels. Dans ce domaine, le numérique pose bien sûr un certain nombre de problèmes, mais il permet également de proposer beaucoup de solutions : je trouve que c’est un environnement très stimulant et je me réjouis de travailler un jour en ce sens.</p>
+                <p>Aujourd’hui, je cherche à terminer mon parcours de formation en alternance, mais surtout à trouver une entreprise dans laquelle je me sente bien et avec laquelle collaborer et évoluer sur le long terme.</p>
+                <p>A moyen et long terme, je compte bien sûr développer mes connaissances en développement Front, mais également en UI/UX design et m'initier au développement d'applications mobiles.</p>
             </div>
         </section>
 
@@ -219,36 +218,36 @@
                 la solution existante. En outre elle a une bonne maitrise des technologies du Web. Si vous voulez
                 des applications optimisées et accessible pour tous, je vous conseille fortement Marie. "</quote>
             <p id="refer-link">Reçue sur Malt <a href="http://malt.fr/profile/marieb" target="_blank"
-                    class="btn-circle-refer btn-circle btn-circle-xs"><i class="fas fa-external-link-alt"></i></a></p>
+                    class="btn-circle-refer btn-circle btn-circle-xs interactive"><i class="fas fa-external-link-alt"></i></a></p>
         </section>
 
         <section class="section" id="skills">
             <div class="skills-groups">
                 <ul>
-                    <li>HTML5<span class="68"></span></li>
-                    <li>CSS3<span class="76"></span></li>
-                    <li>Accessibilité<span class="63"></span></li>
-                    <li>Sass<span class="71"></span></li>
+                    <li>HTML5<i></i><span class="78"></span></li>
+                    <li>CSS3<i></i><span class="83"></span></li>
+                    <li>Accessibilité<i></i><span class="68"></span></li>
+                    <li>Sass<i></i><span class="76"></span></li>
                 </ul>
                 <ul id="groupJS">
-                    <li>Javascript<span class="67"></span></li>
-                    <li>React<span class="59"></span></li>
+                    <li>Javascript<i></i><span class="67"></span></li>
+                    <li>React<i></i><span class="63"></span></li>
                 </ul>
                 <ul>
-                    <li>UI/UX design<span class="58"></span></li>
-                    <li>WordPress<span class="54"></span></li>
-                    <li>Figma, Gimp<span class="56"></span></li>
+                    <li>UI/UX design<i></i><span class="47"></span></li>
+                    <li>Atomic Design<i></i><span class="62"></span></li>
+                    <li>WordPress<i></i><span class="54"></span></li>
+                    <li>Figma, Sketch<i></i><span class="56"></span></li>
                 </ul>
             </div>
-            <p class="skills-more h5">Coming soon</p>
+            <p class="skills-more h5 interactive-text">Coming soon</p>
             <ul class="skills-to-come">
                 <li>Méthode Agile</li>
                 <li>Conception d'interface</li>
-                <li>Atomic Design</li>
-                <li>Sketch</li>
                 <li>API & API REST</li>
                 <li>Redux</li>
                 <li>BDD & TDD</li>
+                <li>Jest</li>
                 <li>Chrome Debugger</li>
             </ul>
         </section>
@@ -256,35 +255,35 @@
         <section class="section" id="portfolio">
             <div class="btns">
                 <figcaption class="coverletter h3">
-                    <img src="pictures/coverletter.png" alt="">
+                    <img src="pictures/coverletter.png" alt="" class="interactive">
                     <caption>Cover letter</caption>
                 </figcaption>
                 <figcaption class="mon-portfolio h3">
-                    <img src="pictures/portfolio.png" alt="">
+                    <img src="pictures/portfolio.png" alt="" class="interactive">
                     <caption>Portfolio</caption>
                 </figcaption>
                 <figcaption class="ecoarava h3">
-                    <img src="pictures/ecoarava.png" alt="">
+                    <img src="pictures/ecoarava.png" alt="" class="interactive">
                     <caption>Eco Arava</caption>
                 </figcaption>
                 <figcaption class="petitsplats h3">
-                    <img src="pictures/petitsplats.png" alt="">
+                    <img src="pictures/petitsplats.png" alt="" class="interactive">
                     <caption>Les petits plats</caption>
                 </figcaption>
                 <figcaption class="fisheye h3">
-                    <img src="pictures/fisheye.png" alt="">
+                    <img src="pictures/fisheye.png" alt="" class="interactive">
                     <caption>Fisheye</caption>
                 </figcaption>
                 <figcaption class="gameon h3">
-                    <img src="pictures/gameon.png" alt="">
+                    <img src="pictures/gameon.png" alt="" class="interactive">
                     <caption>GameOn</caption>
                 </figcaption>
                 <figcaption class="ohmyfood h3">
-                    <img src="pictures/ohmyfood.png" alt="">
+                    <img src="pictures/ohmyfood.png" alt="" class="interactive">
                     <caption>Oh My Food</caption>
                 </figcaption>
                 <figcaption class="reservia h3">
-                    <img src="pictures/reservia.png" alt="">
+                    <img src="pictures/reservia.png" alt="" class="interactive">
                     <caption>Reservia</caption>
                 </figcaption>
             </div>
@@ -584,25 +583,25 @@
                 <h3>Envoyez-moi un mail</h3>
                 <div>
                     <a href="mailto:marie.buerki@gmail.com" target="_blank"
-                        class="btn-circle-contact btn-circle btn-circle-xs" id="send-mail"><i
+                        class="btn-circle-contact btn-circle btn-circle-xs interactive" id="send-mail"><i
                         class="far fa-envelope"></i></a>
                     <p>marie.buerki@gmail.com</p>
                 </div>
                 <h3>Contactez-moi via ces plateformes</h3>
                 <div class="contact-icons">
                     <a href="https://marie-bu.welovedevs.com" target="_blank"
-                        class="btn-circle-contact btn-circle btn-circle-social" id="malt-btn">
+                        class="btn-circle-contact btn-circle btn-circle-social interactive" id="malt-btn">
                         <img src="pictures/w3d-grey.png" alt="" id="w3d-grey">
                         <img src="pictures/w3d-white.png" alt="" id="w3d-white">
                         <img src="pictures/w3d-lightmode.png" alt="" id="w3d-lightmode">
                         <img src="pictures/w3d-darkmode.png" alt="" id="w3d-darkmode">
                     </a>
                     <a href="https://github.com/marie-bu" target="_blank"
-                        class="btn-circle-contact btn-circle btn-circle-social">
+                        class="btn-circle-contact btn-circle btn-circle-social interactive">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="http://linkedin.com/in/marie-bu" target="blank"
-                        class="btn-circle-contact btn-circle btn-circle-social">
+                        class="btn-circle-contact btn-circle btn-circle-social interactive">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
