--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h1>Marie Burki</h1>
                     <h2 class="light">Développeuse Front-end</h2>
                     <h3>Mes langages<br><span class="light">HTML | CSS | Javascript (& React)</span></h3>
-                    <h3>Mes intérêts<br><span class="light">UI/UX | Green IT | Clean Code</span></h3>
+                    <h3>Mes intérêts<br><span class="light">UI/UX | Développement mobile</span></h3>
                 </div>
                 <div class="profile-buttons">
                     <h3>Curriculum Vitae</h3>
