--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                             <p>Accessibilité</p>
                             <p>Git et GitHub</p>
                             <p>WordPress</p>
-                            <p>Sensibilité pour l'UI/UX design</p>
+                            <p>Figma, Sketch, Gimp</p>
+                            <p>UI/UX & Atomic design</p>
                         </div>
                         <div class="cv-content-left-qualities">
                             <h4>Qualités professionnelles</h4>
