fix scroll mobile, closing modal system

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <a href="https://github.com/marie-bu/motivationLetter-ReactApp" target="blank"
                                 class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/motivationLetter-ReactApp/" target="blank"
-                                class="btn-circle-portfolio btn-circle btn-circle-xs"><i class="fas fa-external-link-alt"></i></a>
+                                class="btn-circle-portfolio btn-circle btn-circle-xs" id="code-cover-letter"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </div>
