--- a/index.html
+++ b/index.html
@@ -74,17 +74,12 @@
                     <div class="cv-content-left">
                         <div class="cv-content-top">
                             <img src="pictures/profile.png" alt="">
-                            <div class="cv-content-top-links">
-                                <a href="https://marie-bu.github.io/marie-bu/" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fas fa-laptop"></i></a>
-                                <a href="https://github.com/marie-bu" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fab fa-github"></i></a>
-                                <a href="https://www.linkedin.com/in/marie-bu/" target="blank" class="btn-circle btn-circle-xs btn-circle-cv"><i class="fab fa-linkedin"></i></a>
+                            <div class="cv-content-left-contact">
+                                <a href="https://marie-bu.github.io/marie-bu/" target="blank" class="btn-circle btn-circle-xs"><i class="fas fa-laptop"></i></a>
+                                <a href="https://github.com/marie-bu" target="blank" class="btn-circle btn-circle-xs"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/marie-bu/" target="blank" class="btn-circle btn-circle-xs"><i class="fab fa-linkedin"></i></a>
+                                <a href="mailto:marie.buerki@gmail.com" target="_blank" class="btn-circle btn-circle-xs"><i class="far fa-envelope"></i></a>
                             </div>
-                        </div>
-                        <div class="cv-content-left-contact">
-                            <h4>Contact</h4>
-                            <p><i class="fas fa-envelope"></i>marie.buerki@gmail.com</p>
-                            <p><i class="fas fa-phone"></i>06 03 10 58 58</p>
-                            <p><i class="fas fa-map-marker-alt"></i>1 rue des Lilas<br>74100, Annemasse</p>
                         </div>
                         <div class="cv-content-left-skills">
                             <h4>Compétences</h4>
@@ -118,10 +113,6 @@
                         <div class="cv-content-top">
                             <h3 class="light-uppercase">Marie Burki</h3>
                             <h2>Développeuse front-end</h2>
-                            <p><i class="fas fa-search"></i>un contrat de professionnalisation <br>
-                                <i class="far fa-calendar-alt"></i>4j/semaine en entreprise - 12 mois <br>
-                                <i class="fas fa-map-marker-alt"></i>en télé-travail ou Annemasse et environs
-                            </p>
                         </div>
                         <div class="cv-content-right-dev">
                             <h4>Développement</h4>
